# amlang

./: .gitattributes  .gitignore  Cargo.toml  README.md  deny.toml  dev-setup.sh
.github/workflows/: buildtest_ubuntu.yml
envs/: context.bootstrap  lang.env  meta.env
examples/: amlang_repl.rs  env_reload.rs  repl.rs  simple_repl.rs
src/: amlang_helpers.rs  append_vec_test.rs  ast.rs  atom.rs  builtin.rs  builtins.rs  cons_list.rs  environment.rs  error.rs  error_helpers.rs  function.rs  interpreter.rs  introspect.rs  introspect_test.rs  lang.env  lang_err.rs  lib.rs  main.rs  meta.env  model.rs  number.rs  parser.rs  primitive.rs  sexp.rs  sexp_conversion.rs  sexp_conversion_test.rs  sexp_test.rs  std_error.rs  symbol.rs  symbol_table.rs  syntax.rs  test.env  tokenizer.rs  tokenizer_test.rs  version.rs
src/agent/: agent.rs  agent_frames.rs  agent_state.rs  amlang_agent.rs  amlang_context.rs  amlang_interpreter.rs  amlang_wrappers.rs  base_deserializer.rs  base_serializer.rs  context.rs  continuation.rs  deserialize_error.rs  designation.rs  env_header.rs  env_manager.rs  env_policy.rs  env_prelude.rs  env_serializer.rs  env_state.rs  exec_state.rs  executor.rs  generic_agent.rs  interpreter.rs  lang_error.rs  lang_serializer.rs  mod.rs  symbol_policies.rs  vm_interpreter.rs
src/env/: append_vec.rs  entry.rs  environment.rs  local_node.rs  mem_env.rs  mem_env_test.rs  meta_env.rs  mod.rs  raw_overlay.rs  triple_set.rs
src/environment/: append_vec.rs  entry.rs  environment.rs  local_node.rs  mem_backend.rs  mem_environment.rs  mem_environment_test.rs  meta_environment.rs  mod.rs  node.rs  (+4 more)
tests/: base_serde_test.rs  lang_test.rs
(+59 files in other folders)
