[package]
name = "amlang"
version = "0.1.0"
authors = ["Alex Khouderchah <alex.khouderchah@gmail.com>"]
edition = "2018"

[dependencies]
# Core deps.
colored = "^2.0.0"
dyn-clone = "^1.0.4"
lazy_static = "^1.4.0"
log = "^0.4.14"
regex = "^1.5.5"

# Feature-gated deps (although may be default-enabled).
rustyline = { version = "^9.0.0", optional = true }

[dev-dependencies]
clap = "^2.33.0"
env_logger = "^0.8.4"

[features]
default = ["cli"]
cli = ["rustyline"]
