[package]
name = "amlang"
version = "0.1.0"
authors = ["Alex Khouderchah <alex.khouderchah@gmail.com>"]
edition = "2018"

[dependencies]
# Core deps.
colored = "~2"
dyn-clone = "~1"
lazy_static = "~1"
libc = "~0.2.108"
log = "~0.4.14"
regex = "~1"
serde = { version = "~1", features = ["derive"] }

# Feature-gated deps (although may be default-enabled).
rustyline = { version = "~9", optional = true }

[dev-dependencies]
clap = "~3"
env_logger = "~0.8.4"

[features]
default = ["cli"]
cli = ["rustyline"]
